--- a/css/style.scss
+++ b/css/style.scss
@@ -1,1 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Belleza&display=swap');
 
+* {
+  box-sizing: border-box;
+  font-family: 'Belleza', sans-serif;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+
+  @import 'components/header';
+  @import 'components/main';
+  @import 'components/footer';
+}
