--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,1 +1,6 @@
+$primary-color: linear-gradient(
+  90deg,
+  rgba(230, 204, 178, 1) 0%,
+  rgba(208, 200, 167, 1) 100%
+);
 $secondary-color: rgba(245, 245, 245, 0.6);
