--- a/css/components/_header.scss
+++ b/css/components/_header.scss
@@ -5,41 +5,82 @@ header {
   box-shadow: 0 3px 3px -1px gray;
   position: fixed;
   z-index: 2;
+  top: 0;
+  transition: top 0.6s ease-in-out;
+
+  &.hide {
+    top: -200px;
+  }
 
   .header-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-    .dashicons-cart {
-      padding-top: 3px;
-    }
+    margin-right: 3em;
 
     .logo {
       width: 10%;
       margin-left: 1em;
     }
 
-    ul {
+    .header-nav_search-wrapper {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 4em;
-      margin-right: 2em;
 
-      li {
-        list-style-type: none;
-        font-size: 1.3rem;
+      ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 4em;
+        margin-right: 2em;
 
-        a {
-          text-decoration: none;
-          font-weight: bold;
-          color: #282828;
-          transition: color 0.2s ease;
+        li {
+          list-style-type: none;
+          font-size: 1.3rem;
 
-          &:hover {
-            color: gainsboro;
+          &.current_page_item {
+            a,
+            span {
+              color: gainsboro;
+              text-decoration: underline;
+              text-underline-offset: 15px;
+              text-decoration-thickness: 3px;
+            }
           }
+
+          a {
+            text-decoration: none;
+            font-weight: bold;
+            color: #282828;
+            transition: color 0.2s ease, text-decoration 0.2s ease;
+
+            &:hover {
+              color: gainsboro;
+              text-decoration: underline;
+              text-underline-offset: 15px;
+            }
+
+            .dashicons-cart {
+              padding-top: 3px;
+            }
+
+            span {
+              &:hover {
+                color: gainsboro;
+              }
+            }
+          }
+        }
+      }
+
+      .dashicons-search {
+        font-size: 1.5rem;
+        transition: transform 0.4s ease-in-out;
+
+        &:hover {
+          cursor: pointer;
+          transform: scale(1.02);
         }
       }
     }
