--- a/css/components/_mobile-menu.scss
+++ b/css/components/_mobile-menu.scss
@@ -41,6 +41,13 @@ header {
             &:nth-child(2) {
               display: none;
             }
+
+            &.current_page_item {
+              a,
+              span {
+                text-decoration: none;
+              }
+            }
           }
         }
       }
