--- a/css/components/_footer.scss
+++ b/css/components/_footer.scss
@@ -1,15 +1,17 @@
 footer {
-  background-color: white;
+  background: linear-gradient(
+    90deg,
+    rgba(230, 204, 178, 1) 0%,
+    rgba(208, 200, 167, 1) 100%
+  );
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 2em;
   height: 8em;
-  background-color: whitesmoke;
   padding: 2em;
   width: 100%;
-  box-shadow: 0 -3px 3px gray;
 
   .sm-icons-footer {
     display: flex;
@@ -21,14 +23,6 @@ footer {
 
       &:hover {
         transform: scale(1.1);
-      }
-    }
-  }
-
-  li {
-    a {
-      &:hover {
-        text-decoration: underline;
       }
     }
   }
