--- a/css/components/_single-product.scss
+++ b/css/components/_single-product.scss
@@ -2,12 +2,14 @@
   margin-top: 3em;
 
   .woocommerce-product-gallery__image {
-    width: 100vw;
+    display: flex;
+    justify-content: center;
+
     a {
       img {
         border-radius: 2px;
-        width: 70%;
-        height: 70%;
+        width: 100%;
+        height: 100%;
       }
     }
   }
