--- a/css/components/_cart-total.scss
+++ b/css/components/_cart-total.scss
@@ -15,10 +15,9 @@
     }
 
     table {
-      border: 0.5px solid gray;
       border-radius: 5px;
       width: 90%;
-      box-shadow: 2px 2px 2px gray;
+      box-shadow: 0 0 5px gray;
       background: rgba(245, 245, 245, 0.6);
       border-collapse: collapse;
 
