--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -53,7 +53,7 @@
         .placeholder-search-icon {
           position: absolute;
           left: 0;
-          top: 10px;
+          top: 12px;
           font-size: 3rem;
           color: lightgray;
           margin-left: 1em;
@@ -71,6 +71,18 @@
         input {
           font-size: 2.5rem;
           padding: 0.5em 0.5em 0.5em 2.2em;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 414px) {
+  html {
+    .search-wrapper-hidden {
+      .search-input-field {
+        .placeholder-search-icon {
+          left: 10px;
         }
       }
     }
@@ -107,7 +119,7 @@
 
         .hamburger {
           right: 20px;
-          top: 15px;
+          top: 8px;
         }
       }
     }
@@ -115,7 +127,7 @@
     .search-wrapper-hidden {
       .search-input-field {
         .placeholder-search-icon {
-          top: 15px;
+          top: 18px;
           margin-left: 1em;
         }
 
@@ -148,8 +160,21 @@
     .search-wrapper-hidden {
       .search-input-field {
         .placeholder-search-icon {
-          top: 10px;
-          left: 30px;
+          top: 12px;
+          left: 25px;
+        }
+      }
+    }
+  }
+}
+
+/* IPAD PRO */
+@media screen and (min-width: 833px) and (orientation: portrait) {
+  html {
+    .search-wrapper-hidden {
+      .search-input-field {
+        .placeholder-search-icon {
+          top: 18px;
         }
       }
     }
@@ -163,69 +188,72 @@
 
     header {
       .header-wrapper {
-        a {
+        .logo {
           width: 8em;
-          left: 200px;
+          margin-left: 1em;
+          margin-top: 0.5em;
+          padding-top: 0.5em;
 
-          .logo {
+          img {
             width: 100%;
           }
         }
-      }
 
-      .nav-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: fit-content;
-
-        .nav-menu-wrapper {
-          background-color: initial;
-          position: relative;
-          height: auto;
-          left: 430px;
+        .nav-container {
+          display: flex;
+          justify-content: center;
+          align-items: center;
           width: fit-content;
 
-          .menu-top-menu-container {
-            ul {
-              flex-direction: row;
-              gap: 2em;
+          .nav-menu-wrapper {
+            background-color: initial;
+            position: relative;
+            height: auto;
+            left: 440px;
+            width: auto;
 
-              li {
-                a {
-                  font-size: 1.2rem;
-                }
+            .menu-top-menu-container {
+              ul {
+                margin-left: 10em;
+                flex-direction: row;
+                gap: 4em;
 
-                &:nth-child(2) {
-                  display: block;
-                }
+                li {
+                  a {
+                    font-size: 1.2rem;
+                  }
 
-                &.current_page_item {
-                  a,
-                  span {
-                    text-decoration: underline;
-                    text-underline-offset: 15px;
-                    text-decoration-thickness: 3px;
+                  &:nth-child(2) {
+                    display: block;
+                  }
+
+                  &.current_page_item {
+                    a,
+                    span {
+                      text-decoration: underline;
+                      text-underline-offset: 15px;
+                      text-decoration-thickness: 3px;
+                    }
                   }
                 }
               }
             }
           }
-        }
 
-        .hamburger {
-          display: none;
-        }
+          .hamburger {
+            display: none;
+          }
 
-        .cart-link {
-          display: none;
-        }
+          .cart-link {
+            display: none;
+          }
 
-        .dashicons-search {
-          position: relative;
-          right: 0;
-          top: 0;
-          font-size: 1.5rem;
+          .dashicons-search {
+            position: relative;
+            right: 30px;
+            top: 0;
+            font-size: 1.5rem;
+          }
         }
       }
     }
@@ -233,7 +261,7 @@
     .search-wrapper-hidden {
       .search-input-field {
         .placeholder-search-icon {
-          top: 8px;
+          top: 13px;
         }
 
         input {
@@ -267,8 +295,8 @@
 
     header {
       .nav-container {
-        .nav-menu-wrapper {
-          left: 470px;
+        .dashicons-search {
+          right: 60px;
         }
       }
     }
@@ -284,7 +312,7 @@
   }
 }
 
-@media screen and (min-width: 2160px) {
+@media screen and (min-width: 2074px) {
   html {
     .content-area {
       padding: 10em;
@@ -293,7 +321,20 @@
     .search-wrapper-hidden {
       .search-input-field {
         .placeholder-search-icon {
+          left: 70px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 2559px) {
+  html {
+    .search-wrapper-hidden {
+      .search-input-field {
+        .placeholder-search-icon {
           left: 100px;
+          top: 10px;
         }
       }
     }
