--- a/css/components/_checkout.scss
+++ b/css/components/_checkout.scss
@@ -21,9 +21,9 @@
   align-items: center;
   gap: 2em;
   background: $secondary-color;
-  border-radius: 2px;
+  border-radius: 5px;
   width: 70vw;
-  box-shadow: 2px 2px 2px gray;
+  box-shadow: 0 0 5px gray;
 
   h3 {
     margin-bottom: 2em;
@@ -94,6 +94,7 @@
         font-size: 1.2rem;
         width: 20em;
         background-color: white;
+        box-shadow: 0 3px 2px -2px gray;
       }
     }
   }
