--- a/css/components/_mobile-menu.scss
+++ b/css/components/_mobile-menu.scss
@@ -1,11 +1,11 @@
 header {
   .header-wrapper {
-    a {
+    .logo {
       width: 8em;
-      margin-left: 1.5em;
-      margin-top: 0.5em;
+      margin-left: 1em;
+      margin-top: 0.8em;
 
-      .logo {
+      img {
         width: 100%;
       }
     }
@@ -25,6 +25,7 @@ header {
       .menu-top-menu-container {
         ul {
           padding: 0;
+          margin: 0;
           flex-direction: column;
           justify-content: center;
           align-items: center;
@@ -73,8 +74,8 @@ header {
 
     .dashicons-search {
       position: absolute;
-      right: 100px;
-      top: 4px;
+      right: 95px;
+      top: 5px;
       font-size: 3.5rem;
     }
 
@@ -82,8 +83,8 @@ header {
       width: max-content;
       text-decoration: none;
       position: absolute;
-      right: 60px;
-      top: 0;
+      right: 55px;
+      top: 6px;
 
       span {
         font-size: 3rem;
