--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
+  /* Remove sidebar single product page */
 }
 body.no-scroll {
   overflow: hidden;
@@ -28,10 +29,12 @@ body header.hide {
   top: -200px;
 }
 body header .header-wrapper {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-right: 3em;
+  padding-top: 0.5em;
 }
 body header .header-wrapper .nav-container .nav-menu-wrapper {
   display: flex;
@@ -42,7 +45,6 @@ body header .header-wrapper .nav-container .nav-menu-wrapper ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 3em;
 }
 body header .header-wrapper .nav-container .nav-menu-wrapper ul li {
   list-style-type: none;
@@ -402,10 +404,9 @@ body .woocommerce .cart-collaterals .cart_totals h2 {
   margin: 3em;
 }
 body .woocommerce .cart-collaterals .cart_totals table {
-  border: 0.5px solid gray;
   border-radius: 5px;
   width: 90%;
-  box-shadow: 2px 2px 2px gray;
+  box-shadow: 0 0 5px gray;
   background: rgba(245, 245, 245, 0.6);
   border-collapse: collapse;
 }
@@ -488,9 +489,9 @@ body .woocommerce .checkout {
   align-items: center;
   gap: 2em;
   background: rgba(245, 245, 245, 0.6);
-  border-radius: 2px;
+  border-radius: 5px;
   width: 70vw;
-  box-shadow: 2px 2px 2px gray;
+  box-shadow: 0 0 5px gray;
 }
 body .woocommerce .checkout h3 {
   margin-bottom: 2em;
@@ -561,6 +562,7 @@ body .woocommerce .checkout #order_review .place-order button {
   font-size: 1.2rem;
   width: 20em;
   background-color: white;
+  box-shadow: 0 3px 2px -2px gray;
 }
 body .woocommerce .checkout #order_review .place-order button:hover {
   transform: translateY(-2px);
@@ -668,7 +670,10 @@ body .search-wrapper-hidden .search-results ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  gap: 4em;
+  align-items: center;
+  gap: 3em;
+  padding: 0;
+  margin: 0;
 }
 body .search-wrapper-hidden .search-results ul li {
   list-style-type: none;
@@ -693,18 +698,21 @@ body .search-wrapper-hidden.show {
   opacity: 1;
   z-index: 10;
 }
+body #sidebar {
+  display: none;
+}
 
 /* MOBILE */
 @media screen and (min-width: 320px) {
   html {
     font-size: 50%;
   }
-  html header .header-wrapper a {
+  html header .header-wrapper .logo {
     width: 8em;
-    margin-left: 1.5em;
-    margin-top: 0.5em;
+    margin-left: 1em;
+    margin-top: 0.8em;
   }
-  html header .header-wrapper a .logo {
+  html header .header-wrapper .logo img {
     width: 100%;
   }
   html header .nav-container .nav-menu-wrapper {
@@ -719,6 +727,7 @@ body .search-wrapper-hidden.show {
   }
   html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul {
     padding: 0;
+    margin: 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -752,8 +761,8 @@ html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.curr
   }
   html header .nav-container .dashicons-search {
     position: absolute;
-    right: 100px;
-    top: 4px;
+    right: 95px;
+    top: 5px;
     font-size: 3.5rem;
   }
   html header .nav-container .cart-link {
@@ -762,8 +771,8 @@ html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.curr
     width: max-content;
     text-decoration: none;
     position: absolute;
-    right: 60px;
-    top: 0;
+    right: 55px;
+    top: 6px;
   }
   html header .nav-container .cart-link span {
     font-size: 3rem;
@@ -844,7 +853,7 @@ html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.curr
   html .search-wrapper-hidden .search-input-field .placeholder-search-icon {
     position: absolute;
     left: 0;
-    top: 10px;
+    top: 12px;
     font-size: 3rem;
     color: lightgray;
     margin-left: 1em;
@@ -860,6 +869,11 @@ html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.curr
   html .search-wrapper-hidden .search-input-field input {
     font-size: 2.5rem;
     padding: 0.5em 0.5em 0.5em 2.2em;
+  }
+}
+@media screen and (min-width: 414px) {
+  html .search-wrapper-hidden .search-input-field .placeholder-search-icon {
+    left: 10px;
   }
 }
 /* MOBILE LANDSCAPE */
@@ -881,10 +895,10 @@ html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.curr
   }
   html header .nav-container .hamburger {
     right: 20px;
-    top: 15px;
+    top: 8px;
   }
   html .search-wrapper-hidden .search-input-field .placeholder-search-icon {
-    top: 15px;
+    top: 18px;
     margin-left: 1em;
   }
   html .search-wrapper-hidden .search-input-field .close-icon {
@@ -901,8 +915,14 @@ html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.curr
 }
 @media screen and (min-width: 800px) {
   html .search-wrapper-hidden .search-input-field .placeholder-search-icon {
-    top: 10px;
-    left: 30px;
+    top: 12px;
+    left: 25px;
+  }
+}
+/* IPAD PRO */
+@media screen and (min-width: 833px) and (orientation: portrait) {
+  html .search-wrapper-hidden .search-input-field .placeholder-search-icon {
+    top: 18px;
   }
 }
 /* DESKTOP & TABLET LANDSCAPE */
@@ -910,14 +930,16 @@ html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.curr
   html {
     font-size: 90%;
   }
-  html header .header-wrapper a {
+  html header .header-wrapper .logo {
     width: 8em;
-    left: 200px;
+    margin-left: 1em;
+    margin-top: 0.5em;
+    padding-top: 0.5em;
   }
-  html header .header-wrapper a .logo {
+  html header .header-wrapper .logo img {
     width: 100%;
   }
-  html header .nav-container {
+  html header .header-wrapper .nav-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -925,45 +947,44 @@ html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.curr
     width: -moz-fit-content;
     width: fit-content;
   }
-  html header .nav-container .nav-menu-wrapper {
+  html header .header-wrapper .nav-container .nav-menu-wrapper {
     background-color: initial;
     position: relative;
     height: auto;
-    left: 430px;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
+    left: 440px;
+    width: auto;
   }
-  html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul {
+  html header .header-wrapper .nav-container .nav-menu-wrapper .menu-top-menu-container ul {
+    margin-left: 10em;
     flex-direction: row;
-    gap: 2em;
+    gap: 4em;
   }
-  html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li a {
+  html header .header-wrapper .nav-container .nav-menu-wrapper .menu-top-menu-container ul li a {
     font-size: 1.2rem;
   }
-  html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li:nth-child(2) {
+  html header .header-wrapper .nav-container .nav-menu-wrapper .menu-top-menu-container ul li:nth-child(2) {
     display: block;
   }
-  html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.current_page_item a,
-html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.current_page_item span {
+  html header .header-wrapper .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.current_page_item a,
+html header .header-wrapper .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.current_page_item span {
     text-decoration: underline;
     text-underline-offset: 15px;
     text-decoration-thickness: 3px;
   }
-  html header .nav-container .hamburger {
+  html header .header-wrapper .nav-container .hamburger {
     display: none;
   }
-  html header .nav-container .cart-link {
+  html header .header-wrapper .nav-container .cart-link {
     display: none;
   }
-  html header .nav-container .dashicons-search {
+  html header .header-wrapper .nav-container .dashicons-search {
     position: relative;
-    right: 0;
+    right: 30px;
     top: 0;
     font-size: 1.5rem;
   }
   html .search-wrapper-hidden .search-input-field .placeholder-search-icon {
-    top: 8px;
+    top: 13px;
   }
   html .search-wrapper-hidden .search-input-field input {
     font-size: 2rem;
@@ -982,19 +1003,25 @@ html header .nav-container .nav-menu-wrapper .menu-top-menu-container ul li.curr
   html {
     font-size: 100%;
   }
-  html header .nav-container .nav-menu-wrapper {
-    left: 470px;
+  html header .nav-container .dashicons-search {
+    right: 60px;
   }
   html .search-wrapper-hidden .search-input-field .placeholder-search-icon {
     top: 15px;
     left: 40px;
   }
 }
-@media screen and (min-width: 2160px) {
+@media screen and (min-width: 2074px) {
   html .content-area {
     padding: 10em;
   }
   html .search-wrapper-hidden .search-input-field .placeholder-search-icon {
+    left: 70px;
+  }
+}
+@media screen and (min-width: 2559px) {
+  html .search-wrapper-hidden .search-input-field .placeholder-search-icon {
     left: 100px;
+    top: 10px;
   }
 }/*# sourceMappingURL=style.css.map */
